test_output3.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:dataBindingTriggerDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:bundleDebugClassesToRuntimeJar UP-TO-DATE
> Task :app:bundleDebugClassesToCompileJar UP-TO-DATE
> Task :app:preDebugUnitTestBuild UP-TO-DATE
> Task :app:compileDebugUnitTestKotlin NO-SOURCE
> Task :app:javaPreCompileDebugUnitTest UP-TO-DATE

> Task :app:compileDebugUnitTestJavaWithJavac FAILED
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:10: error: package androidx.fragment.app.testing does not exist
import androidx.fragment.app.testing.FragmentScenario;
                                    ^
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:35: error: cannot find symbol
        FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
        ^
  symbol:   class FragmentScenario
  location: class SettingsFragmentTest
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:35: error: cannot find symbol
        FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
                                                      ^
  symbol:   variable FragmentScenario
  location: class SettingsFragmentTest
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:64: error: cannot find symbol
        FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
        ^
  symbol:   class FragmentScenario
  location: class SettingsFragmentTest
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:64: error: cannot find symbol
        FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
                                                      ^
  symbol:   variable FragmentScenario
  location: class SettingsFragmentTest
5 errors

[Incubating] Problems report is available at: file:///C:/Users/mattv/AndroidStudioProjects/redact/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugUnitTestJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:35: error: cannot find symbol
          FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
          ^
    symbol:   class FragmentScenario
    location: class SettingsFragmentTest
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:35: error: cannot find symbol
          FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
                                                        ^
    symbol:   variable FragmentScenario
    location: class SettingsFragmentTest
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:64: error: cannot find symbol
          FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
          ^
    symbol:   class FragmentScenario
    location: class SettingsFragmentTest
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:64: error: cannot find symbol
          FragmentScenario<SettingsFragment> scenario = FragmentScenario.launchInContainer(SettingsFragment.class);
                                                        ^
    symbol:   variable FragmentScenario
    location: class SettingsFragmentTest
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\SettingsFragmentTest.java:10: error: package androidx.fragment.app.testing does not exist
  import androidx.fragment.app.testing.FragmentScenario;
                                      ^

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 1s
25 actionable tasks: 1 executed, 24 up-to-date
